漏洞2（native root_seed 明文分片）— 已完成代码改造 + Python 参考模型验证
威胁模型说明（重要）：native DLL 是自包含离线解密，root_seed 必须能在无外部输入下于运行时重算，所以任何"加密"用的密钥也得在二进制内 → 本质是混淆 / 抬高门槛，不是密码学级保密。真正的机器级强绑定由云端 moduleKey 的指纹 HKDF 层负责（已落地）。本修复目标：击溃 strings / 静态字节数组提取 / 朴素内存扫描这类低成本提取。
class_decrypt.cpp：seed_part_a/b/c/d 不再存明文，改存 密文 = 明文 XOR HKDF-keystream。新增 compute_seed_keystream()：keystream 的密钥在代码里由两个 build salt 拼接后 SHA-256 派生（不以连续可识别形态存在于二进制）。assemble_root_seed() 先解包密文分片→明文分片，再跑原 XOR 重组公式，并对栈上中间值清零。
embed-keys.py：新增 seed_keystream() / wrap_seed_parts()（与 C++ 逐字节等价、确定性、无随机 IV）；canonical root_seed 仍由明文分片计算并写回 root_seed.bin（encrypt-jar.py 的类密钥派生路径完全不变），只把密文分片 patch 进 .cpp。
验证（真机执行）：新增 scripts/selftest-seed-wrap.py，固定向量 + 5000 组随机分片 → C++ 端"从存储密文解包→重组"还原出的 root_seed 逐字节等于 canonical root_seed，且存储分片均≠明文 → SEED_WRAP_SELFTEST_PASS；py_compile embed-keys.py → PY_COMPILE_OK。